<resources>
    <string name="app_name">TeamProject</string>
    <string name="search_hint">Search Animal Exhibits</string>
    <string name="search_title">Search</string>
    <string name="plan">Plan</string>
    <string name="directions_title">Directions</string>
    <string name="next">Next\n</string>
    <string name="prev">Previous\n</string>
    <string name="empty"></string>
    <string name="settings_title">Settings</string>
    <string name="search_results_title">Search Results</string>
    <string name="app_title">Zoo Seeker</string>

    <!-- Directions Preferences -->
    <string name="direction_mode">Default direction mode</string>
</resources>